--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ document.addEventListener('DOMContentLoaded', function(e) {
                                     <li class="list-inline-item">
                     <a href="https://yichenl.georgetown.domains/Yichen_Liu_ds.pdf">
                       <button type="button" class="btn btn-outline-dark mb-2">
-                        CV
+                        CV(Includes Project Links)
                       </button>
                     </a>
                   </li>
@@ -140,7 +140,7 @@ document.addEventListener('DOMContentLoaded', function(e) {
                   </a>
                                     <a href="https://yichenl.georgetown.domains/Yichen_Liu_ds.pdf">
                     <button type="button" class="list-group-item list-group-item-action my-1 rounded">
-                      CV
+                      CV(Includes Project Links)
                     </button>
                   </a>
                                     <a href="mailto:ycliuleo0601@gmail.com">
