--- a/intro.html
+++ b/intro.html
@@ -151,19 +151,25 @@ ul.task-list li input[type="checkbox"] {
 
 <p>My name is Yichen Liu. I’m currently a Master student in Data Science at Georgetown University. I hold a Bachelor of Science degree in Computer Engineering from Virginia Tech, where he focused in Control Robotics &amp; Autonomy and Networking &amp; Cybersecurity.</p>
 <hr>
-<div id="listing-intro-listings" class="quarto-listing quarto-listing-container-default">
+<section id="publication" class="level2">
+<h2 class="anchored" data-anchor-id="publication">Publication</h2>
+<ol type="1">
+<li><p>Yuying Yang; Yuxuan Huang; Yichen Liu; Bin Liu, Grey Clustering Analysis of Provincial Scientific and Technological Innovation Capability in Chinese Mainland, Journal of Grey System. 2023, Vol. 35 Issue 2, p130-148. 19p.</p></li>
+<li><p>Jiaming Zhang, Yichen Liu, Jiaqi Jiao, Bin Liu. Forecasting intermittent product demand with GA-GNN method for a distribution center, Under reviewing in IEEE Transactions on Network and Service Management.</p></li>
+</ol>
+
+
+
+</section>
+
+<div class="quarto-listing quarto-listing-container-default" id="listing-intro-listings">
 <div class="list quarto-listing-default">
 
 </div>
 <div class="listing-no-matching d-none">
 No matching items
 </div>
-</div>
-
-
-
-
-</main> <!-- /main -->
+</div></main> <!-- /main -->
 <script id="quarto-html-after-body" type="application/javascript">
 window.document.addEventListener("DOMContentLoaded", function (event) {
   const toggleBodyColorMode = (bsSheetEl) => {
