--- a/intro.html
+++ b/intro.html
@@ -154,8 +154,8 @@ ul.task-list li input[type="checkbox"] {
 <section id="publication" class="level2">
 <h2 class="anchored" data-anchor-id="publication">Publication</h2>
 <ol type="1">
-<li><p>Yuying Yang; Yuxuan Huang; Yichen Liu; Bin Liu, Grey Clustering Analysis of Provincial Scientific and Technological Innovation Capability in Chinese Mainland, Journal of Grey System. 2023, Vol. 35 Issue 2, p130-148. 19p.</p></li>
-<li><p>Jiaming Zhang, Yichen Liu, Jiaqi Jiao, Bin Liu. Forecasting intermittent product demand with GA-GNN method for a distribution center, Under reviewing in IEEE Transactions on Network and Service Management.</p></li>
+<li><p><a href="https://eds.s.ebscohost.com/abstract?site=eds&amp;scope=site&amp;jrnl=09573720&amp;AN=167448232&amp;h=OH%2bAdWw4scZxndRg1CmWradtUWqDcRj7FxrvP%2bZipqyhMclnRGuUGSF9ramqIlP8QHlX9Bx2p%2fXir3zZhOl89w%3d%3d&amp;crl=f&amp;resultLocal=ErrCrlNoResults&amp;resultNs=Ehost&amp;crlhashurl=login.aspx%3fdirect%3dtrue%26profile%3dehost%26scope%3dsite%26authtype%3dcrawler%26jrnl%3d09573720%26AN%3d167448232">Yuying Yang; Yuxuan Huang; Yichen Liu; Bin Liu, Grey Clustering Analysis of Provincial Scientific and Technological Innovation Capability in Chinese Mainland, Journal of Grey System. 2023, Vol. 35 Issue 2, p130-148. 19p.</a></p></li>
+<li><p>Jiaming Zhang, Yichen Liu, Jiaqi Jiao, Bin Liu. Forecasting intermittent product demand with GA-GNN method for a distribution center, Under reviewing in IEEE Transactions on Network and Service Management.</p></li>
 </ol>
 
 
